# polysimulator-sdk

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
polysim_clob_client/: __init__.py  client.py  clob_types.py  constants.py  exceptions.py
polysim_clob_client/order_builder/: __init__.py  constants.py
polysim_polymarket/: __init__.py  environments.py  errors.py  models.py  pagination.py  rfq.py
polysim_polymarket/clients/: _account.py  _common.py  _onchain.py  _trade.py  async_public.py  async_secure.py  public.py  secure.py
polysim_polymarket/streams/: __init__.py  _adapt.py  _crypto_events.py  _handle.py  _market_events.py  _runner.py  _specs.py  _stream_open.py  _user_events.py  _validators.py
polysim_sdk/: __init__.py  _http.py  _shared.py  _version.py  aio.py  client.py  constants.py  exceptions.py  pagination.py  retry.py  sse.py  updown.py  ws.py
scripts/: 01_balance_and_market.py  02_clob_dropin_demo.py  03_async_concurrent.py  04_btc_updown.py
tests/: _parity_helpers.py  conftest.py  test_async_pacing.py  test_clob_parity.py  test_clob_updown.py  test_edge_block.py  test_http_error_code.py  test_native_client.py  test_pagination.py  test_polymarket_account_review_fixes.py  test_polymarket_async_behavioral_parity.py  test_polymarket_async_guards_and_validation.py  test_polymarket_async_pagination.py  test_polymarket_async_public_adapter.py  test_polymarket_async_public_parity.py  test_polymarket_async_secure_adapter.py  test_polymarket_async_secure_dry.py  test_polymarket_async_secure_parity.py  test_polymarket_behavioral_parity.py  test_polymarket_conditional_balance.py  test_polymarket_full_surface_parity.py  test_polymarket_g4_reexports.py  test_polymarket_input_validation.py  test_polymarket_onchain_primitives.py  test_polymarket_pagination.py  test_polymarket_plural_guards.py  test_polymarket_public_adapter.py  test_polymarket_public_parity.py  test_polymarket_reexports.py  test_polymarket_secure_adapter.py  test_polymarket_secure_builder_rfq.py  test_polymarket_secure_g4_parity.py  test_polymarket_secure_onchain.py  test_polymarket_secure_parity.py  test_polymarket_secure_public_parity.py  test_polymarket_secure_rewards.py  test_polymarket_secure_trading_adapter.py  test_polymarket_secure_trading_parity.py  test_polymarket_secure_trading_review_fixes.py  test_polymarket_secure_trading_validation.py  (+15 more)
